--- a/react-app/src/components/NavBar.css
+++ b/react-app/src/components/NavBar.css
@@ -87,21 +87,20 @@ ul {
     background-color: #5cc5a8
 }
 
-#dropdown_menu {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 35px;
-    right: 260px;
-    box-shadow: 0px 1px 8px rgb(183, 183, 183);
-    border-radius: 10px;
-    width: 150px;
-    z-index: 1;
-    background-color: white;
-}
 
 #nav-user-button > i {
-    opacity: 0.5;
+    opacity: 0.4;
     font-size: 11px;
     margin-left: 5px;
+}
+
+.profile-dropdown {
+    position: absolute;
+    right: 15%;
+    z-index: 20;
+    background-color: white;
+    border: 1px solid #dddddd;
+    border-radius: 5px;
+    padding: 20px 20px 20px 30px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
