--- a/react-app/src/components/SplashPage/SplashPage.css
+++ b/react-app/src/components/SplashPage/SplashPage.css
@@ -3,25 +3,29 @@
 }
 
 .white-left-container {
-    flex-wrap: wrap;
-    width: 50vw;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    width: 50%;
 }
 
-.white-right-container {
+/* .white-right-container {
 
-}
+} */
 
-.white-left-total-text {
+/* .white-left-total-text {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 30vw;
     margin: auto;
-}
+} */
 
 .row-container {
     display: flex;
     justify-content: center;
+    color: white;
 }
 
 .block-container {
@@ -29,6 +33,23 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.black-block {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+#orange-block {
+    background-color: #da5424bd;
+}
+
+#green-block {
+    background-color: #1ebc9cbc
+}
+
+.purple-block {
+    background-color: #8457c8c6;
 }
 
 #sign-up-button-2 {
@@ -47,4 +68,14 @@
     box-shadow: none;
     position: relative;
     bottom: 0
+}
+
+.iphone-imgs {
+    width: 40%
+}
+
+.review-bar {
+    display: flex;
+    justify-content: center;
+    margin: 10px;
 }
