change template css color

--- a/react-app/src/components/Template/Template.css
+++ b/react-app/src/components/Template/Template.css
@@ -36,7 +36,7 @@
 
 .left-empty-div {
     flex-grow: 80%;
-    background-color: antiquewhite;   
+    background-color: black;   
     flex:1
 }
 
