--- a/react-app/src/components/Template/Template.css
+++ b/react-app/src/components/Template/Template.css
@@ -6,6 +6,8 @@
     margin-right: 0;
     padding-left: 0;
     padding-right: 0;
+    margin-top: 0;
+    padding-top: 0;
 
 }
 
@@ -21,7 +23,7 @@
     display: flex;
     flex-direction: column;
     background-color:red;
-    flex:1
+    flex:1.5
 }
 
 
@@ -36,13 +38,13 @@
 
 .left-empty-div {
     flex-grow: 80%;
-    background-color: black;   
+    background-color:rgb(255, 255,255);   
     flex:1
 }
 
 .right-side-bar-div{
     flex-grow: 20%;
-    background-color: yellow;
+    background-color:rgb(255, 255,255);
     flex:1;
     display: flex;
     flex-direction: column;
@@ -53,7 +55,7 @@
 
 .active-side-bar {
     display: flex;
-    padding-right: 80px;
+    padding-right: 45px;
     padding-left: 80px;
     flex-direction: column;
     row-gap: 10px;
@@ -75,16 +77,18 @@
 
 
 .dashboard{
-    background-color: aliceblue;
+    background-color: rgb(255, 255,255);
     color: black;
+    width: max-content;
 
 
 }
 
 
 .all-expenses {
-    background-color: aliceblue;
+    background-color: rgb(255, 255,255);
     color: black;
+    width: max-content;
     
 
 
@@ -92,16 +96,18 @@
 
 
 .group {
-    background-color: aliceblue;
+    background-color: rgb(255, 255,255);
     color: black;
+    width: max-content;
 
 
     
 }
 
 .friends {
-    background-color: aliceblue;
+    background-color: rgb(255, 255,255);
     color: black;
+    width: max-content;
 
 
     
@@ -117,3 +123,22 @@
 .content {
     background-color: aquamarine;
 }
+
+
+.dashboard:hover {
+    background-color:rgb(238, 238,238);
+}
+
+.all-expenses:hover {
+    background-color:rgb(238, 238,238);
+}
+
+.group:hover {
+    background-color:rgb(238, 238,238);
+}
+
+.friends:hover {
+    background-color:rgb(238, 238,238);
+}
+
+
