--- a/react-app/src/components/SplashPage/SplashPage.css
+++ b/react-app/src/components/SplashPage/SplashPage.css
@@ -12,16 +12,16 @@
     display: flex;
     flex-direction: column;
     padding-left: 18%;
+    padding-top: 30px;
     width: 50%;
 }
 
 .white-right-container {
     width: 50%;
     font-size: 400px;
-    padding-right: 18%;
 }
 
-.white-left-container .big-text {
+.title-text, .rotating-text {
     font-size: 40px;
     font-weight: 700;
 }
@@ -30,7 +30,7 @@
     font-size: 28px;
     padding-bottom: 20px;
 }
-.big-text {
+.big-text, .rotating-text, .title-text {
     font-weight: 600;
 }
 
@@ -133,4 +133,49 @@
     font-size: 45px;
     gap: 25px;
     padding: 20px 0 20px;
+}
+
+/* for dynamic loading */
+.big-image.active,
+.rotating-text.active {
+    display: block;
+    opacity: 1;
+    animation-duration: 2s;
+    animation-timing-function: ease-in-out;
+    animation-name: fadeIn;
+}
+
+.big-image,
+.rotating-text {
+    display: none;
+    opacity: 0;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.rotating-image {
+    opacity: 0.3;
+}
+
+.rotating-image.left_active {
+    opacity: 1;
+    animation-duration: 2s;
+    animation-timing-function: ease-in-out;
+    animation-name: fadeInLeft;
+}
+
+@keyframes fadeInLeft {
+    from {
+        opacity: 0.3;
+    }
+    to {
+        opacity: 1;
+    }
 }
