--- a/react-app/src/components/OneExpenseModal/OneExpenseModal.css
+++ b/react-app/src/components/OneExpenseModal/OneExpenseModal.css
@@ -6,6 +6,10 @@
     justify-content: flex start;
 }
 
+.one-expense-text {
+    text-align: center;
+}
+
 .note-image {
     display: flex;
     align-items: center;
