--- a/react-app/src/components/Comment/comment.css
+++ b/react-app/src/components/Comment/comment.css
@@ -7,7 +7,7 @@
 .each-comment-container {
     border: 1px solid #cccccc;
     border-radius: 5px;
-    width: 25%;
+    width: 90%;
     padding: 0 5px 0;
     margin: 10px 0 10px;
 }
@@ -30,7 +30,8 @@
 .post-comment {
     display: flex;
     flex-direction: column;
-    width: 25%;
+    width: 90%;
+    resize: none;
 }
 
 .update-comment {
