--- a/react-app/src/components/auth/auth.css
+++ b/react-app/src/components/auth/auth.css
@@ -96,3 +96,12 @@
 .footer {
     background-size:cover
 }
+
+#logout-button {
+    border: none;
+    background-color: white;
+    cursor: pointer;
+    padding-left: 0;
+    margin-top: 5px;
+    font-size: 16px;
+}
