--- a/react-app/src/components/NavBar.css
+++ b/react-app/src/components/NavBar.css
@@ -111,4 +111,8 @@ ul {
     border-radius: 5px;
     padding: 20px 20px 20px 30px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    gap: 10px
 }
