--- a/react-app/src/components/Template/Template.css
+++ b/react-app/src/components/Template/Template.css
@@ -7,9 +7,11 @@
     padding-left: 0;
     padding-right: 0;
     margin-top: 0;
-    padding-top: 30px;
-
-
+    position: relative;
+    top: 32px;
+    font-family: sans-serif;
+    font-size: 11px;
+   
 }
 
 .left-side{
@@ -59,11 +61,13 @@
 
 .active-side-bar {
     display: flex;
-    padding-right: 45px;
-    padding-left: 80px;
     flex-direction: column;
     row-gap: 10px;
     column-gap: 20px;
+    position:relative;
+    padding-left: 45px;
+    color:grey; 
+    
 }
 
 
@@ -147,8 +151,8 @@
     background-color:rgb(238, 238,238);
 }
 
-.friends:hover {
+/* .friends:hover {
     background-color:rgb(238, 238,238);
-}
+} */
 
 
