--- a/react-app/src/components/friends/SideBar.css
+++ b/react-app/src/components/friends/SideBar.css
@@ -10,15 +10,21 @@
 
 
 .add-friends-sign {
+    height: 20px;
     padding-top:0px;
     padding-bottom: 0px;
+    background-color:rgb(238, 238,238) ;
+    display: flex;
+    justify-content: space-between;
   
 }
 
 
 .friend-name {
     text-decoration: none;
-    color:grey;  
+    color:grey; 
+    padding-left: 0;
+    margin-left: 0;
 }
 
 li{
@@ -30,6 +36,10 @@ li{
 p.p-friends {
     padding-top:0px;
     padding-bottom: 0px;
+    display: inline-block;
+    margin-top: 0;
+    margin-bottom: 0;
+    
 }
 
 /* .deleteBtn{
@@ -39,7 +49,9 @@ p.p-friends {
 .addBtn {
     /* padding-left: 60px; */
     border: none;
-    background-color:rgb(255, 255,255)
+    background-color:rgb(238, 238,238);
+    display: inline-block;
+    margin-left: 70px;
 }
 
 .firend-deleteBtn {
@@ -50,12 +62,12 @@ p.p-friends {
 
 .friends-names{
     display: inline-block;
-    width:85px
+    width: 100px
 }
 
 .deleBtndiv {
     display: inline;
-    padding-left: 10px;
+    padding-left: 30px;
 }
 
 .deleteBtn {
@@ -75,4 +87,5 @@ p.p-friends {
 
 .deleteBtn:hover {
     cursor: pointer;
+    color: red;
 }
