--- a/react-app/src/components/friends/FriendDetail.css
+++ b/react-app/src/components/friends/FriendDetail.css
@@ -71,3 +71,12 @@
     font-weight: bold;
 }
 
+.your-balance {
+    margin-left: 20px;
+    width: max-content;
+}
+
+.balance-content {
+    margin-left: 20px;
+    color: #FF652F;
+}
