--- a/react-app/src/components/Groups/GroupsSidebar/GroupsSidebar.css
+++ b/react-app/src/components/Groups/GroupsSidebar/GroupsSidebar.css
@@ -1,3 +1,37 @@
 .create-group-link {
     text-decoration: none;
+    /* width: fit-content; */
+}
+
+/* .groups-sidebar-div {
+    border: 1px blue solid;
+} */
+
+.sidebar-heading-create {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    /* border-bottom: 1px solid grey; */
+    /* border: 1px solid red; */
+    margin-bottom: 5px;
+    padding: 5px;
+    padding-left: 5px;
+    align-items: center;
+    background-color: rgba(128, 128, 128, 0.2);
+}
+
+.sidebar-heading {
+    margin: 0;
+    width: 50%;
+    padding: 0;
+    font-size: 12px;
+}
+
+.create-group-link {
+    margin: 0;
+    width:45%;
+    font-size: 10px;
+    display: flex;
+    justify-content: right;
 }
