--- a/react-app/src/components/SplashPage/SplashPage.css
+++ b/react-app/src/components/SplashPage/SplashPage.css
@@ -76,14 +76,26 @@
     font-weight: 600;
     color: white;
     border: none;
-    background-color: #653aabca;
+    background-color: #79d3ba;
     padding: 18px 70px 18px;
-    box-shadow: 0px 3px 3px #6d4e9f;
+    box-shadow: 0px 3px 3px rgba(128, 128, 128, 0.88);
     cursor: pointer;
     margin: 20px 0 20px;
     border-radius: 5px;
     position: relative;
     bottom: 2px;
+    animation-duration: 2s;
+    animation-timing-function: ease-in-out;
+    animation-name: fadeInButton;
+}
+
+@keyframes fadeInButton {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 #sign-up-button-2 {
@@ -101,7 +113,8 @@
     bottom: 2px;
 }
 
-#sign-up-button-2:hover {
+#sign-up-button-2:hover,
+#sign-up-button-3:hover {
     box-shadow: none;
     position: relative;
     bottom: 0
