Added Edmund's expense modal.

--- a/react-app/src/components/Groups/GroupDetails/GroupDetails.css
+++ b/react-app/src/components/Groups/GroupDetails/GroupDetails.css
@@ -79,3 +79,9 @@
     border-radius: 2px;
     cursor: pointer;
 }
+
+.title.group-exp-title {
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 10px;
+}
