half way done of the sidebar

--- a/react-app/src/components/Dashboard/Dashboard.css
+++ b/react-app/src/components/Dashboard/Dashboard.css
@@ -88,3 +88,17 @@
     display: list-item;
     list-style-type: circle;
 }
+
+
+.dashboard-link {
+    text-decoration: none;
+    color: gray;
+}
+
+
+
+
+.dashboard {
+    display: flex;
+
+}
