--- a/react-app/src/components/Groups/GroupsSidebar/GroupsSidebar.css
+++ b/react-app/src/components/Groups/GroupsSidebar/GroupsSidebar.css
@@ -8,6 +8,7 @@
 } */
 
 .sidebar-heading-create {
+    height: 10px;
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -18,14 +19,15 @@
     padding: 5px;
     padding-left: 5px;
     align-items: center;
-    background-color: rgba(128, 128, 128, 0.2);
+    background-color:#EEEEEE;
+    color: gray;
 }
 
 .sidebar-heading {
     margin: 0;
     width: 50%;
     padding: 0;
-    font-size: 12px;
+    font-size: 10px;
 }
 
 .create-group-link {
@@ -34,4 +36,14 @@
     font-size: 10px;
     display: flex;
     justify-content: right;
+}
+
+
+.add-link {
+    color: gray;
+
+}
+
+.add-link:hover {
+    cursor: pointer;
 }
