--- a/react-app/src/components/Groups/AddGroupMemberForm/AddGroupMemberForm.css
+++ b/react-app/src/components/Groups/AddGroupMemberForm/AddGroupMemberForm.css
@@ -1,5 +1,5 @@
 .add-group-member-form-div {
-    height: 300px;
+    height: fit-content;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,7 +27,7 @@
 
 .dynamic-form-container > input {
     height: 20px;
-    width: 87%;
+    width: 95%;
     font-size: 16px;
 }
 
@@ -49,12 +49,18 @@
 
 .add-grp-delete-button {
     font-weight: 600;
-    color: red;
-    background-color: transparent;
-    padding: 5px 5px 5px 10px;
-    /* box-shadow: 0px 3px 3px grey; */
-    border: none;
+    font-size: 18px;
+    width: 98%;
+    color: white;
+    background-color: red;
+    padding: 10px 10px 10px;
+    box-shadow: 0px 3px 3px grey;
     cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    position: relative;
+    bottom: 2px;
+    margin-top: 5px;
 }
 
 .group-settings {
