live site bug fixes

--- a/react-app/src/components/Groups/GroupDetails/GroupDetails.css
+++ b/react-app/src/components/Groups/GroupDetails/GroupDetails.css
@@ -44,6 +44,8 @@
 .group-expense-recipient {
     color: grey;
     font-size: 15px;
+    display: flex;
+    justify-content: right;
 }
 
 .group-header {
