--- a/react-app/src/components/AllExpenses/AllExpenses.css
+++ b/react-app/src/components/AllExpenses/AllExpenses.css
@@ -5,6 +5,7 @@
     font-size: large;
 }
 
+
 /* .expense-row:hover {
     background-color: lightgray;
     cursor: pointer;
@@ -17,8 +18,7 @@
 
 .create-buttons {
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: center;
     border-bottom: 1px lightgray solid;
 }
 
@@ -26,13 +26,14 @@
     color: white;
     background-color: #ff652f;
     text-shadow: 0 -1px 0 #c83400;
-    padding: 10px 5px 10px;
+    padding: 10px 15px 10px;
     box-shadow: 0px 3px 3px grey;
     cursor: pointer;
     border: none;
     border-radius: 5px;
     position: relative;
     bottom: 2px;
+    width: 120px;
     margin-right: 5px;
 }
 
@@ -42,23 +43,21 @@
 
 .group-charge-button:hover {
     background-color: #52b197;
-    bottom: 0px;
 }
 
 .group-charge-button {
     color: white;
-    background-color: #79d3ba;
+    background-color: #5bc5a7;
     text-shadow: 0 -1px 0 #318970;
-    border: none;
-    height: fit-content;
+    padding: 10px 15px 10px;
     box-shadow: 0px 3px 3px grey;
     cursor: pointer;
-    padding: 10px 10px 10px;
-    height: fit-content;
+    border: none;
     border-radius: 5px;
     position: relative;
     bottom: 2px;
-    margin-right: 5px;
+    width: 120px;
+    margin-left: 5px;
 }
 
 .expense-details-button {
@@ -152,5 +151,5 @@
 .all-expenses-link {
     text-decoration: none;
     color: gray;
-
+    
 }
