--- a/react-app/src/components/friends/FriendDetail.css
+++ b/react-app/src/components/friends/FriendDetail.css
@@ -79,5 +79,14 @@
 
 .balance-content {
     margin-left: 20px;
+    color:black;
+}
+
+
+.email-address {
+    color:#FF652F
+}
+
+.created-year {
     color: #FF652F;
 }
